Fix job section unequal spacing left/right

--- a/styles.css
+++ b/styles.css
@@ -420,7 +420,7 @@ nav {
 }
 .job-group {
   background-color: rgb(168, 189, 255);
-  width: calc(min(100vw, var(--max-width)) * 0.8);
+  /* width: calc(min(100vw, var(--max-width)) * 0.8); */
 
   display: flex;
   flex-direction: column;
@@ -447,7 +447,7 @@ nav {
     height: auto;
   }
   .photo8 {
-    max-width: calc(min(100vw, var(--max-width)) * 0.8);
+    max-width: 100%;
   }
   .job-group {
     padding-top: calc(100vw * 0.07);
